--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "graphql": "^15.4.0",
-
+    "@apollo/react-hooks": "^4.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "apollo-boost": "^0.4.9"
+
   },
   "scripts": {
     "start": "react-scripts start",
